Fixing error unit test
